--- a/index.html
+++ b/index.html
@@ -724,10 +724,16 @@
         }
 
         .etse-examples__caption {
-            padding: 12px 14px 14px;
-            font-size: 13px;
-            line-height: 1.5;
-            opacity: 0.9;
+            background: rgba(6, 19, 34, 0.85);   /* м’який темний фон */
+            color: #f1f5f9;                      /* світлий текст */
+            padding: 14px 18px;
+            border-radius: 0 0 20px 20px;
+            font-size: 15px;
+            line-height: 1.35;
+            font-weight: 400;                    /* краще читається */
+            min-height: 68px;                    /* однакова висота підписів */
+            display: flex;
+            align-items: center;
         }
 
         /* ------- адаптив ------- */
@@ -757,36 +763,51 @@
         /* FAQ */
 
         .faq-item {
-            border-radius: 14px;
-            padding: 12px 14px;
-            border: 1px solid rgba(148, 163, 184, 0.55);
-            background: rgba(255, 255, 255, 0.95);
-            margin-bottom: 8px;
-        }
-        .dark-theme .faq-item {
-            background: rgba(15, 23, 42, 0.9);
-        }
-        .faq-q {
-            font-size: 14px;
-            font-weight: 600;
-            margin-bottom: 4px;
-        }
-        .faq-a {
-            font-size: 13px;
-            color: var(--text-muted);
+            border-radius: 16px;
+            overflow: hidden;
+            background: rgba(6, 19, 34, 0.96);            /* темна плитка */
+            border: 1px solid rgba(15, 23, 42, 0.7);
+            color: #e5e7eb;                                /* базовий світлий текст всередині */
         }
 
-        .feature-card img {
+        /* Якщо потім захочеш окрему світлу тему — повернемось до body.light-theme ... */
+
+        .faq-header {
             width: 100%;
-            height: 220px;
-            object-fit: contain; /* або cover — вибереш що виглядає краще */
-            border-radius: 12px;
-            background: #f5f5f7;
-            padding: 12px;
+            padding: 18px 24px;
+            background: transparent;
+            border: none;
+            font-size: 16px;
+            font-weight: 600;
             display: flex;
-            flex-direction: column;
-            gap: 12px;
+            justify-content: space-between;
+            align-items: center;
+            cursor: pointer;
+            color: #f9fafb;                                /* питання – майже білим */
         }
+
+        .faq-icon {
+            font-size: 20px;
+            line-height: 1;
+            opacity: 0.85;
+            color: #cbd5f5;                                /* плюсик – світлий, але не кричить */
+            transition: transform 0.2s ease;
+        }
+
+        .faq-item.open .faq-icon {
+            transform: rotate(45deg);
+        }
+
+        .faq-body {
+            max-height: 0;
+            overflow: hidden;
+            padding: 0 24px 0 24px;
+            transition: max-height 0.25s ease, padding-bottom 0.25s ease;
+            font-size: 14px;
+            line-height: 1.6;
+            color: #e2e8f0;                                /* текст відповіді трохи м’якший */
+        }
+
 
 
 
@@ -2699,7 +2720,7 @@
                         <img src="images/photo5.jpg"  alt="Світла гардеробна з панелями та полицями" loading="lazy">
                     </div>
                     <figcaption class="etse-examples__caption">
-                       Гардеробна&nbsp;• панелі Cleaf / SAIB, полиці та труби PR-2912
+                        Гардеробна&nbsp;• панелі Cleaf / SAIB, полиці, навесни тумбі та аксесуари.
                     </figcaption>
                 </figure>
 
@@ -2719,7 +2740,7 @@
                         <img src=images/mt_magnit.jpg alt="Тумба, труба та підсвітка у гардеробній" loading="lazy">
                     </div>
                     <figcaption class="etse-examples__caption">
-                        Сценарій «туалетний столик»&nbsp;• підвісна тумба, труба, LED-підсвітка
+                        Реальна експозиція MT • стінова система eTSecutive з тумбами та полицями.
                     </figcaption>
                 </figure>
 
@@ -2729,7 +2750,7 @@
                         <img src="images/photo8.jpg" alt="Нахилені полиці для взуття" loading="lazy">
                     </div>
                     <figcaption class="etse-examples__caption">
-                        Нахилені полиці для взуття&nbsp;• модуль преміум-бутику
+                        Нахилені полиці для взуття&nbsp;• модуль преміум-бутика, профіль поперечний.
                     </figcaption>
                 </figure>
 
@@ -3153,16 +3174,21 @@
         const data = collectCalculationSummaryForTelegram();
         const csv  = collectCSVForTelegram();
 
-        // ✅ Валідація контактів
+// Валідація контактів
         if (!data.firstName || data.firstName.trim() === "") {
             alert("Будь ласка, вкажіть імʼя.");
             return;
         }
 
-        if (!data.phone || data.phone.trim() === "") {
-            alert("Будь ласка, вкажіть номер телефону.");
+// Валідація телефону (формат 0XXXXXXXXX)
+        const phone = data.phone.trim();
+        const phoneRegex = /^0\d{9}$/;
+
+        if (!phoneRegex.test(phone)) {
+            alert("Невірний формат телефону.\nВикористовуйте формат: 0XXXXXXXXX");
             return;
         }
+
 
         // 1️⃣ Перше (коротке) повідомлення — для менеджера
         const textSummary = [
