correct contact block

--- a/index.html
+++ b/index.html
@@ -892,14 +892,29 @@
 
         /* Контактна картка справа */
 
+        /*.etse-cta__contacts {*/
+        /*    flex: 0 0 280px;*/
+        /*    max-width: 320px;*/
+        /*    padding: 16px 18px;*/
+        /*    border-radius: 22px;*/
+        /*    background: rgba(6, 19, 34, 0.92);*/
+        /*    box-shadow: 0 18px 30px rgba(15, 23, 42, 0.4);*/
+        /*    font-size: 13px;*/
+        /*}*/
+
         .etse-cta__contacts {
             flex: 0 0 280px;
             max-width: 320px;
-            padding: 16px 18px;
+            padding: 18px 20px;
             border-radius: 22px;
-            background: rgba(6, 19, 34, 0.92);
-            box-shadow: 0 18px 30px rgba(15, 23, 42, 0.4);
-            font-size: 13px;
+
+            background: rgba(255, 255, 255, 0.25);
+            backdrop-filter: blur(12px);
+
+            border: 1px solid rgba(255, 255, 255, 0.35);
+            color: #0f172a;
+
+            box-shadow: 0 8px 24px rgba(0,0,0,0.12);
         }
 
         .etse-cta__contacts-row + .etse-cta__contacts-row {
